[0, 15, 32]: 2017-08-21
  - allow setting ``yaml.default_flow_style = None`` (default: ``False``) for
    for ``typ='rt'``.
  - fix for issue 149: multiplications on ``ScalarFloat`` now return ``float``

[0, 15, 31]: 2017-08-15
  - fix Comment dumping

[0, 15, 30]: 2017-08-14
  - fix for issue with "compact JSON" not parsing: ``{"in":{},"out":{}}``
    (reported on `StackOverflow <https://stackoverflow.com/q/45681626/1307905>`_ by
    `mjalkio <https://stackoverflow.com/users/5130525/mjalkio>`_

[0, 15, 29]: 2017-08-14
  - fix issue #51: different indents for mappings and sequences (reported by 
    Alex Harvey)
  - fix for flow sequence/mapping as element/value of block sequence with 
    sequence-indent minus dash-offset not equal two.

[0, 15, 28]: 2017-08-13
  - fix issue #61: merge of merge cannot be __repr__-ed (reported by Tal Liron)

[0, 15, 27]: 2017-08-13
  - fix issue 62, YAML 1.2 allows ``?`` and ``:`` in plain scalars if non-ambigious
    (reported by nowox)
  - fix lists within lists which would make comments disappear

[0, 15, 26]: 2017-08-10
  - fix for disappearing comment after empty flow sequence (reported by
    oit-tzhimmash)

[0, 15, 25]: 2017-08-09
  - fix for problem with dumping (unloaded) floats (reported by eyenseo)

[0, 15, 24]: 2017-08-09
  - added ScalarFloat which supports roundtripping of 23.1, 23.100,
    42.00E+56, 0.0, -0.0 etc. while keeping the format. Underscores in mantissas
    are not preserved/supported (yet, is anybody using that?).
  - (finally) fixed longstanding issue 23 (reported by `Antony Sottile
    <https://bitbucket.org/asottile/>`_), now handling comment between block
    mapping key and value correctly
  - warn on YAML 1.1 float input that is incorrect (triggered by invalid YAML
    provided by Cecil Curry)
  - allow setting of boolean representation (`false`, `true`) by using:
    ``yaml.boolean_representation = [u'False', u'True']``

[0, 15, 23]: 2017-08-01